@@ -1,6 +1,6 @@
 {
     "name" : "iotsa",
-    "version" : "1.6.1",
+    "version" : "1.7",
     "description" : "Library/application framework that allows easy creation of web servers and REST servers. Optional modules provide access control, clock synchronisation, over-the-air programming, static document storage and retrieval and more. Add your own modules to access hardware.",
     "keywords" : "web, http, rest, wifi",
     "authors" : {
@@ -16,13 +16,28 @@
     },
     "frameworks" : "Arduino",
     "platforms" : [ "espressif8266"],
-    "dependencies" : {
-        "Adafruit NeoPixel" : ">=1.0.0",
-        "Time" : ">=1.5",
-        "Timezone" : ">=1.1.1",
-        "ArduinoJson" : ">=5.13.0",
-        "ArduinoJWT" : ">=1.0.1"
-    },
+    "dependencies" : [
+        {
+            "name" : "Adafruit NeoPixel",
+            "version" : "~1.1.6"
+        },
+        {
+            "name" : "Time",
+            "version" : ">=1.5"
+        },
+        {
+            "name" : "Timezone",
+            "version" : "~1.1.1"
+        },
+        {
+            "name" : "ArduinoJson",
+            "version" : "~5.13.0"
+        },
+        {
+            "name" : "ArduinoJWT",
+            "version" :  "~1.0.1"
+        }
+    ],
     "examples" : [
         "[Ee]xamples/*/*.ino"
     ]
