@@ -15,9 +15,8 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 lib_deps = 
-    Adafruit NeoPixel
-    Time
-    Timezone
-    iotsa
-    ArduinoJson
-    ArduinoJWT
+    Adafruit NeoPixel@~1.1.6
+    Time@>=1.5
+    Timezone@~1.1.1
+    ArduinoJson@~5.13.0
+    ArduinoJWT@~1.0.1
